// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MapDetailKadastraalObject should not render size 1`] = `
<MapDetailResultWrapper
  onMaximize={[MockFunction]}
  panoUrl="panoUrl"
  subTitle="Kadastraal object label"
  title="Kadastraal object"
>
  <ul
    className="map-detail-result__list"
  >
    <MapDetailResultItem
      label="Objectnummer"
      value="123ABC"
    />
    <MapDetailResultItem
      label="Grootte"
      value=""
    />
  </ul>
</MapDetailResultWrapper>
`;

exports[`MapDetailKadastraalObject should render everything 1`] = `
<MapDetailResultWrapper
  onMaximize={[MockFunction]}
  panoUrl="panoUrl"
  subTitle="Kadastraal object label"
  title="Kadastraal object"
>
  <ul
    className="map-detail-result__list"
  >
    <MapDetailResultItem
      label="Objectnummer"
      value="123ABC"
    />
    <MapDetailResultItem
      label="Kadastrale gemeente"
      value="Kadastrale gemeente label: Kadastrale gemeente name"
    />
    <MapDetailResultItem
      label="Grootte"
      value="115 m²"
    />
  </ul>
</MapDetailResultWrapper>
`;

exports[`MapDetailKadastraalObject should render with zero value for size 1`] = `
<MapDetailResultWrapper
  onMaximize={[MockFunction]}
  panoUrl="panoUrl"
  subTitle="Kadastraal object label"
  title="Kadastraal object"
>
  <ul
    className="map-detail-result__list"
  >
    <MapDetailResultItem
      label="Objectnummer"
      value="123ABC"
    />
    <MapDetailResultItem
      label="Grootte"
      value="0 m²"
    />
  </ul>
</MapDetailResultWrapper>
`;

exports[`MapDetailKadastraalObject should render without kadastrale gemeente 1`] = `
<MapDetailResultWrapper
  onMaximize={[MockFunction]}
  panoUrl="panoUrl"
  subTitle="Kadastraal object label"
  title="Kadastraal object"
>
  <ul
    className="map-detail-result__list"
  >
    <MapDetailResultItem
      label="Objectnummer"
      value="123ABC"
    />
    <MapDetailResultItem
      label="Grootte"
      value="115 m²"
    />
  </ul>
</MapDetailResultWrapper>
`;
